--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-keyboard-aware-view": "0.0.14",
     "react-native-lightbox": "^0.8.1",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^4.7.2",
     "react-native-profile-picture": "^1.0.0",
     "react-native-reanimated": "^1.9.0",
     "react-native-safe-area-context": "^3.0.5",
