--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@dudigital/react-native-zoomable-view": "^1.0.15",
+    "@ovalmoney/react-native-fitness": "^0.5.3",
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^7.3.1",
     "@react-native-firebase/auth": "^8.0.7",
@@ -25,6 +26,7 @@
     "react-native-animatable": "^1.3.3",
     "react-native-elements": "^2.0.2",
     "react-native-gesture-handler": "^1.6.1",
+    "react-native-google-fit": "^0.16.2",
     "react-native-image-picker": "^2.3.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.1",
     "react-native-keyboard-aware-view": "0.0.14",
